--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@supabase/supabase-js": "^2.47.12",
     "cookie-parser": "^1.4.7",
-    "express": "^4.21.2",
-    "mysql2": "^3.12.0"
+    "express": "^4.21.2"
   }
 }
